fix reactive-model bug on Safari

--- a/client/style/app.styl
+++ b/client/style/app.styl
@@ -70,7 +70,6 @@ rounded-corners(radius)
     size = height
     rounded-corners(size/2)
     vertical-align: middle
-    vertical-align: middle
     width: size
 
 .Link
